--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
+    "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
